# holbertonschool-low_level_programming

./: CMakeLists.txt  git config
functions_nested_loops/: 0-putchar.c  1-alphabet  1-alphabet.c  10-add  10-add.c  11-98  11-print_to_98.c  2-alphabet_x10  2-print_alphabet_x10.c  3-islower  3-islower.c  4-isalpha  4-isalpha.c  5-sign  5-sign.c  6-abs.c  7-last_digit  7-print_last_digit.c  8-24  8-24_hours.c  9-times_table  9-times_table.c  README.md  b5-sign.c  main.h  pr8-24_hours  pr8-24_hours.c  test  test.c
hello_world/: 0-preprocessor  1-compiler  4-puts.c  5-printf.c  6-size.c  size64
more_functions_nested_loops/: 0-isupper.c  0-putchar  1-isdigit.c  10-print_triangle.c  10-triangles  2-mul  2-mul.c  3-print_numbers  3-print_numbers.c  4-print_most_numbers.c  5-more_numbers  5-more_numbers.c  6-print_line.c  7-diagonals  7-print_diagonal.c  8-print_square.c  8-squares  9-fizz_buzz.c  main.h  test  test.c
pointers_arrays_strings/: 0-reset_to_98.c  0-strcat  0-strcat.c  1-strncat  1-strncat.c  1-swap.c  100-atoi  100-atoi.c  2-strlen.c  2-strncpy  2-strncpy.c  3-puts.c  3-strcmp  3-strcmp.c  4-print_rev  4-print_rev.c  4-rev_array  4-rev_array.c  5-rev_string  5-rev_string.c  5-string_toupper  5-string_toupper.c  6-cap  6-cap_string.c  6-puts2  6-puts2.c  7-1337  7-leet.c  7-puts_half  7-puts_half.c  7-tempon  8-print_array  8-print_array.c  9-strcpy.c  core.1244  core.13320  core.13382  core.13438  core.13492  core.13543  (+33 more)
variables_if_else_while/: 0-positive_or_negative.c  1-last_digit  1-last_digit.c  100-print_comb3  100-print_comb3.c  101-print_comb4  a.out  (+14 more)
(+2 files in other folders)
